--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,18 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 add_subdirectory(googletest)
 
+add_executable(runMain
+  main.cpp
+  src/map.cpp
+  src/room.cpp
+)
+
 add_executable(runOutputTests
 # test/screenOutputTests.cpp
 #  src/screenManager.cpp
   test/mapTest.cpp
   src/map.cpp
+  src/room.cpp
 )
 
 target_link_libraries(runOutputTests gmock gtest gtest_main)
