--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,3 +73,6 @@ add_executable(runRoomTests
 
 target_link_libraries(runRoomTests gmock gtest gtest_main)
 target_link_libraries(runMain gmock gtest gtest_main)
+target_link_libraries(runItemDatabaseTests gmock gtest gtest_main)
+target_link_libraries(runItemTests gmock gtest gtest_main)
+target_link_libraries(runInventoryTests gmock gtest gtest_main)
