--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Final-project-tests)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
+
 add_subdirectory(googletest)
 
 add_executable(runOutputTests
@@ -156,6 +157,29 @@ add_executable(runMapTests
   src/skeleton.cpp
   src/boss.cpp
 )
+
+add_executable(runEnemyTests
+  test/enemyTests.cpp
+  src/screenManager.cpp
+  src/itemDatabase.cpp
+  src/item.cpp
+  src/inventory.cpp
+  src/weapon.cpp
+  src/usable.cpp
+  src/equip.cpp 
+  src/map.cpp
+  src/room.cpp
+  src/entity.cpp
+  src/player.cpp
+  src/enemy.cpp
+  src/witch.cpp
+  src/spider.cpp
+  src/golem.cpp
+  src/skeleton.cpp
+  src/boss.cpp
+)
+
+target_link_libraries(runEnemyTests gmock gtest gtest_main)
 target_link_libraries(runMapTests gmock gtest gtest_main)
 target_link_libraries(runRoomTests gmock gtest gtest_main)
 target_link_libraries(runMapTests gmock gtest gtest_main)
